# vinyller

./: .gitignore  .pyinstaller_ignore  README.en.md  README.md  README.ru.md  installer.iss  pyproject.toml  requirements.txt  update_version.py  version_info.txt  vinyller.py
.github/workflows/: build.yml
assets/styles/: dark_mod.css  linux_mod.css  main.css  scrollbars.css
docs/: MANUAL.en.md  MANUAL.ru.md
src/core/: action_handler.py  context_menu_handler.py  hotkey_manager.py  library_manager.py  library_processor.py  mac_media_handler.py  state_manager.py  update_checker.py
src/encyclopedia/: encyclopedia_components.py  encyclopedia_dialogs.py  encyclopedia_editor_dialog.py  encyclopedia_helper.py  encyclopedia_injects.py  encyclopedia_manager.py  encyclopedia_manager_window.py
src/meta_editor/: album_batch_editor.py  editor_components.py  main_editor.py  mixed_batch_editor.py  single_track_editor.py
src/player/: player.py
src/ui/: control_panel.py  custom_base_dialogs.py  custom_base_widgets.py  custom_cards.py  custom_classes.py  custom_dialogs.py  custom_lists.py  mode_mini.py  mode_vinyl.py  search_services_tools.py  ui_components.py  ui_main.py  ui_right_panel.py  ui_settings.py  ui_tabs.py
src/utils/: constants.py  theme.py  (+5 more)
tools/: _check_icons.py  _check_line_breaks.py  _check_line_breaks_by_ref.py  _comment_cleaner.py  _generate_readme_toc.py  _test_translations.py  _update_translations.py
translations/: __init__.py  da.py  de.py  en.py  es.py  fr.py  hi.py  it.py  ja.py  ko.py  nb.py  nl.py  pl.py  pt.py  ru.py  sv.py  tr.py  vi.py  zh.py
(+12 files in other folders)
